# internal/application/dto/dynamic_analysis/request.go
@@ -1,1 +1,5 @@
 package dynamic_analysis
+
+type AnalyzeRequest struct {
+	SourceCode string `json:"source_code" binding:"required" validate:"required,min=1"`
+}
